syntax = "proto3";

package nft;

// =======================
// === 1. DỊCH VỤ (SERVICE) ===
// =======================
service NftService {
  // --- Ticket events ---
  rpc CreateTicket (CreateTicketRequest) returns (CreateTicketResponse);
  rpc LogPurchase (LogPurchaseRequest) returns (LogPurchaseResponse);
  rpc GetActiveTickets (GetActiveTicketsRequest) returns (GetActiveTicketsResponse);
  rpc GetUserTickets (GetUserTicketsRequest) returns (GetUserTicketsResponse);
  rpc GetArtistTickets (GetArtistTicketsRequest) returns (GetArtistTicketsResponse);
  rpc GetUpdateStatusTicket (GetUpdateTicketsRequest) returns (GetArtistTicketsResponse);

  // --- Resell tickets ---
  // List ticket for resell
  rpc CreateResellTicket (CreateResellTicketRequest) returns (CreateResellTicketResponse);

  // Buy ticket from resell
  rpc BuyResellTicket (BuyResellTicketRequest) returns (BuyResellTicketResponse);

  // Get marketplace of resell tickets
  rpc GetResellTickets (GetResellTicketsRequest) returns (GetResellTicketsResponse);

  rpc UpdateResellTickets (GetResell) returns (message);
}

// =======================
// === 2. MESSAGE CHUNG ===
// =======================
message EventSummary {
  string eventId = 1;
  string artistId = 2;
  string contractAddress = 3;
  string saleDeadline=4;
  string date=5;
  string location =6;
  string price=7;
  string baseUri = 8;
  string title =9;
  int32 maxSupply=10;
  int32 mintedCount=11;
  string coverImage=12;
  string createdAt=13;
}

message OwnedTicketSummary {
  string userTicketId = 1;
  string tokenId = 2;
  EventSummary event = 3;
  bool isResell = 4;       // Vé đang được bán lại không
  string resellPrice = 5;  // Giá bán lại (nếu có)
}

message PaginationResponse {
  int32 totalItems = 1;
  int32 totalPages = 2;
  int32 currentPage = 3;
}

// =======================
// === 3. MESSAGE CREATE / LOG PURCHASE ===
// =======================
message CreateTicketRequest {
  string artistId = 1;
  string contractAddress = 2;
  string baseUri = 3;
  string saleDeadline=4;
  string date=5;
  string location =6;
  string price=7;
  string title=8;
  int32 maxSupply=9;
  string coverImage=10;
}
message CreateTicketResponse {
  string eventId = 1;
  string status = 2;
}

message LogPurchaseRequest {
  string userId = 1;
  string eventId = 2;
  string tokenId = 3;
  string tx_hash = 4;
}
message LogPurchaseResponse {
  string userTicketId = 1;
}

// =======================
// === 4. GET TICKETS ===
// =======================
message GetActiveTicketsRequest { int32 page = 1; int32 limit = 2; }
message GetActiveTicketsResponse { repeated EventSummary tickets = 1; PaginationResponse pagination = 2; }

message GetUserTicketsRequest { string userId = 1; int32 page = 2; int32 limit = 3; }
message GetUserTicketsResponse { repeated OwnedTicketSummary tickets = 1; PaginationResponse pagination = 2; }

message GetArtistTicketsRequest { string artistId = 1; int32 page = 2; int32 limit = 3; }
message GetArtistTicketsResponse { repeated EventSummary tickets = 1; PaginationResponse pagination = 2; }

message GetUpdateTicketsRequest { string artistId = 1; string status = 2;string eventId=3; }
message GetResell { string sellerId = 1; string resellId=2; }

// =======================
// === 5. RESELL TICKETS ===
// =======================

// Tạo vé bán lại
message CreateResellTicketRequest {
  string userTicketId = 1;  // ID vé gốc của người bán
  string sellerId = 2;      // ai đang bán lại
  string price = 3;         // giá bán lại
}
message CreateResellTicketResponse {
  string resellTicketId = 1;
  string status = 2; // success/failure
}

// Mua vé bán lại
message BuyResellTicketRequest {
  string resellTicketId = 1;
  string buyerId = 2;
}
message BuyResellTicketResponse {
  string userTicketId = 1; // ID vé mua thành công
  string status = 2;       // success/failure
}

// Lấy marketplace vé bán lại
message GetResellTicketsRequest {
  int32 page = 1;
  int32 limit = 2;
}
message message {
  string message=1;
}
message ResellTicketSummary {
  string resellTicketId = 1;
  string originalTicketId = 2;
  string sellerId = 3;
  string price = 4;
  bool isSold = 5;
  string buyerId = 6;
  EventSummary event = 7;
  string tokenId=8;

}
message GetResellTicketsResponse {
  repeated ResellTicketSummary tickets = 1;
  PaginationResponse pagination = 2;
}
